create github pages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best free website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobiri.se/r">free bootstrap template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen" id="header2-1">
 
     
 
@@ -62,7 +62,7 @@
                     Eastern Shore Democrats</h1>
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">Newsletter</h3>
                 
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://sites.google.com/site/esvadems/home" target="_blank">Meetings Info</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="meetinginfo.html">Meetings Info</a>
                     <a class="btn btn-md btn-primary display-4" href="https://vademocrats.org/" target="_blank">Your Elected Officials</a></div>
             </div>
         </div>
