--- a/meetinginfo.html
+++ b/meetinginfo.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple site templates</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
+<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
 
     
 
