--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/b">how to create a website</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -98,7 +98,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">Our Website</h5>
-                <p class="mbr-text">https://sites.google.com/site/esvadems/home</p>
+                <p class="mbr-text"><a href="https://sites.google.com/site/esvadems/home" target="_blank">Eastern Shore Democrats Website</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
