--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -97,20 +97,16 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">Our Website</h5>
-                <p class="mbr-text"><a href="https://sites.google.com/site/esvadems/home" target="_blank">Eastern Shore Democrats Website</a></p>
+                <h5 class="pb-3"><strong>------------------------------<br>Links</strong></h5>
+                <p class="mbr-text"><a href="https://www.democrats.org/" target="_blank">National Democratic Party</a><br><a href="http://vademocrats.org/" target="_blank">Virginia Democratic Party</a><br><a href="https://sites.google.com/site/esvadems/home" target="_blank">Eastern Shore Democratic Committees</a><br><a href="https://sites.google.com/site/esvadems/home/spanish-translation" target="_blank">(En Espanol)</a></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Contact Editor</h5>
-                <p class="mbr-text">
-                    Email: ckelly@msn.com&nbsp;<br><br></p>
+                <h5 class="pb-3"><strong>------------------------------<br>Newsletter Editor</strong></h5>
+                <p class="mbr-text">ckelly@msn.com&nbsp;<br><br></p>
             </div>
-            <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3">
-                    Links
-                </h5>
-                <p class="mbr-text"><a href="https://www.democrats.org/" target="_blank">National Democratic Party</a><a href="https://vademocrats.org/"><br></a><a href="https://vademocrats.org/">VA Democratic Party</a><br>&nbsp;<br></p>
+            <div class="col-12 col-md-3 mbr-fonts-style display-4">
+                <h5 class="pb-3"><strong>------------------------------<br>Other Info</strong></h5>
+                <p class="mbr-text"><a href="https://drive.google.com/open?id=1uvzRXmTZYt0KHHPaLTyyKgwkAhjgDQDiAwr6Uu6HgRI" target="_blank">Join Newsletter List</a><br><a href="https://drive.google.com/file/d/16bwrLsAie97mwbzfrIaV4_7Dg-Q-OV8X/view?usp=sharing" target="_blank">Calendar of Events</a></p>
             </div>
         </div>
         
