--- a/meetinginfo.html
+++ b/meetinginfo.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple website templates</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
+<section class="engine"><a href="https://mobiri.se/b">create your own website</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
 
     
 
