--- a/meetinginfo.html
+++ b/meetinginfo.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/m">website design templates</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
+<section class="engine"><a href="https://mobiri.se/z">best free html templates</a></section><section class="mbr-section content4 cid-qWFfnxhssr" id="content4-c">
 
     
 
@@ -69,7 +69,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-2">
                     Eastern Shore Democrats Meetings</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    Virginia's Accomack &amp; Northampton County Democratic Committees</h3>
+                    Virginia's Accomack &amp; Northampton County Democratic Committees<br><a href="index.html" class="text-secondary">Return Home</a></h3>
                 
             </div>
         </div>
