create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free web templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -71,7 +71,7 @@
         <div class="media-container-row">
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
-                    <div class="mbr-figure" style="width: 60%;">
+                    <div class="mbr-figure" style="width: 135%;">
                       <img src="assets/images/fourth-of-july-hat-in-cape-charles03-263x200.jpg" alt="Cape Charles 4th of July Parade" title="Democrate supporting Kaine &amp; Luria at Cape Charles Parade">  
                     </div>
                     <div class="media-content">
@@ -126,7 +126,7 @@
                                <strong>VA 2nd Candidate Profile -- Elaine Luria</strong><br>Elaine Luria served her country in uniform for 20 years with the philosophy: Be Good.  Do Good Work.  Elaine sees this simple, but powerful message lacking in Washington today. When her peers were heading off to college, Elaine was compelled to be part of something bigger than herself and joined the Navy at 17—so she could give back and help build a safer, stronger, and fairer society for this generation and the next.<br><br>To help the families, seniors, and businesses of Hampton Roads, we need leaders with real-world experience. We need leaders who know what it means to serve, have overcome obstacles, faced adversity and became stronger because of it.</p>
                         </div>
                     </div>
-                    <div class="mbr-figure" style="width: 110%;">
+                    <div class="mbr-figure" style="width: 160%;">
                      <a href="https://elaineforcongress.com/"><img src="assets/images/elaineluria-1-200x200.jpg" alt="Elaine Luria" title="Elaine Luria - Virginia's Second District"></a>  
                     </div>
                 </div>
@@ -180,7 +180,7 @@
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>
                             Tim Kaine - Candidate for Senator from Virginia</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Tim knows that to have a strong Virginia, we need access to good jobs for all, education for all, health care for all, and true equality for all. Together, we can make that happen. So let’s keep up the momentum, move Virginia forward, and re-elect Tim in November.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Tim knows that to have a strong Virginia, we need access to good jobs for all, education for all, health care for all, and true equality for all. We can re-elect Tim with the support of a true grassroots army — and we can work to take back Congress by electing Democrats in every corner of the Commonwealth.&nbsp;Together, we can make that happen. So let’s keep up the momentum, move Virginia forward, and re-elect Tim in November.</p>
                     </div>
                 </div>
             </div>
