--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -74,7 +74,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://sites.google.com/site/esvadems/northampton-county" target="_blank"><img src="assets/images/capecharles-4thjulyparade02-960x850.jpg" alt="Northampton Democrats at Cape Charles Parade" title="Northampton Democrats at Cape Charles Parade"></a>
+                        <a href="https://sites.google.com/site/esvadems/northampton-county"><img src="assets/images/capecharles-4thjulyparade02-1-960x850.jpg" alt="Northampton Democrats at Cape Charles Parade" title="Northampton Democrats at Cape Charles Parade"></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"></h4>
