create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -74,10 +74,10 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://sites.google.com/site/esvadems/northampton-county"><img src="assets/images/capecharles-4thjulyparade02-1-960x850.jpg" alt="Northampton Democrats at Cape Charles Parade" title="Northampton Democrats at Cape Charles Parade"></a>
+                        <a href="https://sites.google.com/site/esvadems/northampton-county"><img src="assets/images/capecharles-4thjulyparade02-2-960x850.jpg" alt="Northampton Democrats at Cape Charles Parade" title="Northampton Democrats at Cape Charles Parade"></a>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7"></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Committee members getting candidate signs ready for parade.</h4>
                         <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>Northampton County Democratic Comittee shows their support for 2018 mid-term candidated at the Annual Cape Charles Fourth of July Parade</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of your fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of our fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.</p>
                     </div>
                 </div>
             </div>
