create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/w">html5 templates</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -63,7 +63,7 @@
     </div>
 </section>
 
-<section class="features2 cid-qWWAZPl9lQ" id="features2-v">
+<section class="features2 cid-qWWIPFijKY" id="features2-x">
 
     
 
@@ -74,11 +74,11 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://sites.google.com/site/esvadems/northampton-county"><img src="assets/images/capecharles-4thjulyparade02-2-960x850.jpg" alt="Northampton Democrats at Cape Charles Parade" title="Northampton Democrats at Cape Charles Parade"></a>
+                        <img src="assets/images/capecharles-4thjulyparade01-1-947x568.jpg" alt="Northampton Democrats 4th of July Parade" title="Northampton Democrats 4th of July Parade">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Committee members getting candidate signs ready for parade.</h4>
-                        <p class="mbr-text mbr-fonts-style display-7"></p>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>Northampton County Democratic Comittee shows their support for 2018 mid-term candidated at the Annual Cape Charles Fourth of July Parade</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of our fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.</p>
                     </div>
                 </div>
             </div>
@@ -86,11 +86,11 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://sites.google.com/site/esvadems/northampton-county" target="_blank"><img src="assets/images/capecharles-4thjulyparade01-947x568.jpg" alt="Cape Charles 4th of July Parade - Northampton Dems" title="Cape Charles 4th of July Parade - Northampton Dems"></a>
+                        <img src="assets/images/capecharles-4thjulyparade02-3-960x850.jpg" alt="Getting candidate signs ready for parade" title="Getting candidate signs ready for parade">
                     </div>
                     <div class="card-box ">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>Northampton County Democratic Comittee shows their support for 2018 mid-term candidated at the Annual Cape Charles Fourth of July Parade</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-7">The Northampton County Democratic Committee and many of our fellow Eastern Shore Democrats marched in the Annual Cape Charles 4th of July parade to show their support for Senator Tim Kaine and Second Congressional District Democratic Candidate, Elaine Luria. A great time was had by all participating.</p>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>Committee members getting candidate signs ready for parade.</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-7"></p>
                     </div>
                 </div>
             </div>
