--- a/elected.html
+++ b/elected.html
@@ -37,14 +37,14 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">free simple website templates</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap templates</a></section><section class="mbr-section content8 cid-qX2vj42gGH" id="content8-11">
 
     
 
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="https://mobirise.com"><span class="mbri-refresh mbr-iconfont mbr-iconfont-btn"></span>Return Home</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-secondary display-4" href="index.html"><span class="mbri-refresh mbr-iconfont mbr-iconfont-btn"></span>Return Home</a></div>
             </div>
         </div>
     </div>
