--- a/meetinginfo.html
+++ b/meetinginfo.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free site templates</a></section><section class="mbr-section content8 cid-qX2sQ3ucKt" id="content8-10">
+<section class="engine"><a href="https://mobiri.se/o">free portfolio website templates</a></section><section class="mbr-section content8 cid-qX2sQ3ucKt" id="content8-10">
 
     
 
@@ -62,14 +62,14 @@
 </p><p><strong>1st Vice Chair: </strong>Frank Moore
 </p><p><strong>2nd Vice Chair: </strong>Debra Wharton
 </p><p><strong>Treasurer: </strong>Al McKegg
-</p><p><strong>Secretary: </strong>Laurie Chamberlain<strong>&nbsp;</strong></p><p><span style="font-size: 1rem;"><strong>-----------------------------</strong></span></p><p><span style="font-size: 1rem;"><strong>Accomack County Committee Meetings</strong></span></p><p><span style="font-size: 1rem;"><strong>Where:</strong>&nbsp;&nbsp;</span><span style="font-size: 1rem;">Eastern Shore Chamber of Commerce Building, 19056 Parkway Road, Melfa, VA 23410</span></p><p><span style="font-size: 1rem;"><strong>When:</strong>&nbsp; Normally on the First Wednesday of each Month @ 6 pm.</span></p><p><span style="font-size: 1rem;"><strong>Website:</strong>&nbsp; https://sites.google.com/site/esvadems/accomack-county<br></span><br></p></div>
+</p><p><strong>Secretary: </strong>Laurie Chamberlain<strong>&nbsp;</strong></p><p><span style="font-size: 1rem;"><strong>-----------------------------</strong></span></p><p><span style="font-size: 1rem;"><strong>Accomack County Committee Meetings</strong></span></p><p><span style="font-size: 1rem;"><strong>Where:</strong>&nbsp;&nbsp;</span><span style="font-size: 1rem;">Eastern Shore Chamber of Commerce Building, 19056 Parkway Road, Melfa, VA 23410</span></p><p><span style="font-size: 1rem;"><strong>When:</strong>&nbsp; Normally on the First Wednesday of each Month @ 6 pm.</span></p><p><span style="font-size: 1rem;"><strong>Website:</strong>&nbsp; <a href="https://sites.google.com/site/esvadems/accomack-county" target="_blank">https://sites.google.com/site/esvadems/accomack-county</a><br></span><br></p></div>
                 <div class="col-12 col-md-6 pl-lg-4 mbr-text mbr-fonts-style display-7"><p><strong>
                      </strong></p><p><strong>Northampton County Democratic Committee Officers:
 </strong></p><p><strong>Chair: </strong>Linda Schulz 
 </p><p><strong>1st Vice Chair: </strong>Bill Payne
 </p><p><strong>2nd Vice Chair: </strong>Bob Toner
 </p><p><strong>Secretary:</strong> Joann Clark
-</p><p><strong>Treasurer: </strong>Arlene Joynes</p><p><strong>-----------------------------</strong></p><p><strong>Northampton County Committee Meetings</strong></p><p><strong>Where:</strong>&nbsp; Northampton Social Services Building, 5265 The Hornes, Eastville, VA 23347</p><p><strong>When:</strong>&nbsp; Normally on the First Tuesday of each Month @ 7 pm.</p><p><strong>Website:</strong>&nbsp; https://sites.google.com/site/esvadems/northampton-county</p></div>
+</p><p><strong>Treasurer: </strong>Arlene Joynes</p><p><strong>-----------------------------</strong></p><p><strong>Northampton County Committee Meetings</strong></p><p><strong>Where:</strong>&nbsp; Northampton Social Services Building, 5265 The Hornes, Eastville, VA 23347</p><p><strong>When:</strong>&nbsp; Normally on the First Tuesday of each Month @ 7 pm.</p><p><strong>Website:</strong>&nbsp; <a href="https://sites.google.com/site/esvadems/northampton-county" target="_blank">https://sites.google.com/site/esvadems/northampton-county</a></p></div>
             </div>
         </div>
     </div>
