--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">site templates free download</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/i">free website creation software</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="POrAys7pfFo+ygyY2F9BI8LBhrZ3RMuVNljIdk4hQlaMT6Ebk63crhAv+nGSKvsVxjn6xu4ZEhac3F6I2Aa39r0LpFkBZywTG/FYevoKglu+bXc5entkReZYAPU802cR" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XGxi2thHvWBdsPjG+VeT3uQtfnff6zzh3vYZZS86oIM3GrGcZ5qGRPh16FWAd42P9kH6TLtP00RYJ8apXxuEIIURuaz7zn3VR/k9wzLf9+M4W7p2njbo0QHv0zgLiZRS" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
