--- a/feedback.html
+++ b/feedback.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple web templates</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content8 cid-qX2x3RMq3u" id="content8-13">
 
     
 
@@ -73,7 +73,7 @@
                         Thanks for filling out the form!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MOn39kXPWd820DbnqiAOD7SsXzY37e84DJDsFMa4ri9ZLgUCBgAyQlt9Roqjg2avC6Kfq4hgIop2CgZxI9IANYyxo4DDTxoKREL5h5J4QdWW/9ftHPevZU/g2HCeVJLR" data-form-field="Email">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7LMZAt3D6D13FHUDeB648CFrMlkzUABtxyKzh2bNTVuSwByjbweYgoLN6sL+m538aq9n88Nm4kkZ3i4SGU7VKrAgpIYoNSX4F7hPid19qfYoRNvVqwPrboOtpXnJRqiE" data-form-field="Email">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
