create github pages

--- a/2018elections.html
+++ b/2018elections.html
@@ -38,7 +38,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section content8 cid-qXdIVOVAR0" id="content8-1l">
 
     
 
@@ -65,7 +65,7 @@
 </div><div><br></div><div><strong>U. S. Senate</strong> - Virginians will elect their Class 1 senator who will serve from 2019 until 2025. Incumbent Senator, Tim Kaine, is seeking a second term. He is facing challenges from Republican, Corey Stewart, and Libertarian, Matt Walters. The Commonwealth's Green and Constitution parties did not run candidates.
 </div><div>
 </div><div><br></div><div><strong>U. S. House of Representatives</strong> - Nine of the 11 incumbent Representatives are running for re-election. The Republican Party is defending seven seats, five of which are incumbents, and the Democratic Party is defending four seats, all of whom are incumbents. Ten of the 11 districts feature at least two candidates running, while three districts have third party candidates running.
-&nbsp;<span style="font-size: 1rem;">In the Virginia Second District, Democrat Elaine Luria will run against Incumbent Republican Scott Taylor.&nbsp;</span></div><div>
+&nbsp;<span style="font-size: 1rem;">In the Virginia Second District, Democrat Elaine Luria will run against Incumbent Republican Scott Taylor and Independent Shaun Brown.</span></div><div>
 </div><div><br></div><div><strong>Amendments </strong>- There are also two state constitutional amendments on the Nov. 6, 2018 ballot. Both proposed ballot amendments received nearly universal, bipartisan support in the Virginia House of Delegates and Senate. Those amendments are the Property Tax Exemption for Flood Abatement Amendment and the Remove Restriction on Residence for Surviving Spouse of Disabled Veteran Tax Exemption Amendment.
 </div><div><strong><br></strong></div></div>
         </div>
