create github pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/a">online website builder</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/r">bootstrap template</a></section><section class="mbr-section content4 cid-qWAQLagET5" id="content4-9">
 
     
 
@@ -283,22 +283,22 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://sites.google.com/site/esvadems/home" target="_blank">
+                    <a href="https://sites.google.com/site/esvadems/home">
                         <img src="assets/images/dnc-donkey-logo-512x512-128x128.png" alt="Eastern Shore Democratic Committees" title="Eastern Shore Democratic Committees">
                     </a>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><strong>Links</strong></h5>
-                <p class="mbr-text"><a href="https://www.democrats.org/" target="_blank">National Democratic Party</a><br><a href="http://vademocrats.org/" target="_blank">Virginia Democratic Party</a><br><a href="https://sites.google.com/site/esvadems/home" target="_blank">Eastern Shore Democratic Committees</a><br><a href="https://sites.google.com/site/esvadems/home/spanish-translation" target="_blank">(En Espanol)</a></p>
+                <h5 class="pb-3"><strong><a href="page5.html">Relevant Links</a></strong></h5>
+                <p class="mbr-text">We have gathered a list of informative and useful National, State and Local Links for your convenience.&nbsp;</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><strong>Newsletter Editor</strong></h5>
-                <p class="mbr-text">ckelly@msn.com&nbsp;<br><br></p>
+                <h5 class="pb-3"><a href="https://www.virginia.gov/services/register-to-vote/" target="_blank">Register to Vote</a></h5>
+                <p class="mbr-text">Access the Virginia Department of Elections website to register to vote online, to review your current voter registration status, and/or submit updates to your voter egistration.</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-4">
-                <h5 class="pb-3"><strong>Other Info</strong></h5>
-                <p class="mbr-text"><a href="https://drive.google.com/open?id=1uvzRXmTZYt0KHHPaLTyyKgwkAhjgDQDiAwr6Uu6HgRI" target="_blank">Join Newsletter List</a><br><a href="https://drive.google.com/file/d/16bwrLsAie97mwbzfrIaV4_7Dg-Q-OV8X/view?usp=sharing" target="_blank">Calendar of Events</a></p>
+                <h5 class="pb-3">Notice</h5>
+                <p class="mbr-text">@ Copyright 2018<br>Eastern Shore Democrats<br>All Rights Reserved</p>
             </div>
         </div>
         
