--- a/page5.html
+++ b/page5.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-2">Our Favorite Links&nbsp;</h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-2">Links to Stuff We Like&nbsp;</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-7"><strong>
                     Links To Other Informative and Useful &nbsp;Resources</strong></h3>
                 
@@ -37,7 +37,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">free bootstrap theme</a></section><section class="mbr-section content8 cid-qXjNkAuqfb" id="content8-1n">
+<section class="engine"><a href="https://mobiri.se/l">free site templates</a></section><section class="mbr-section content8 cid-qXjNkAuqfb" id="content8-1n">
 
     
 
